--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,3 +1,49 @@
+@font-face {
+  font-family: 'Spoqa Han Sans';
+  font-weight: 700;
+  src: local('Spoqa Han Sans Bold'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Bold.woff2') format('woff2'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Bold.woff') format('woff'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Spoqa Han Sans';
+  font-weight: 400;
+  src: local('Spoqa Han Sans Regular'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Bold.woff2') format('woff2'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Bold.woff') format('woff'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Spoqa Han Sans';
+  font-weight: 300;
+  src: local('Spoqa Han Sans Light'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Light.woff2') format('woff2'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Light.woff') format('woff'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Spoqa Han Sans';
+  font-weight: 100;
+  src: local('Spoqa Han Sans Thin'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Thin.woff2') format('woff2'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Thin.woff') format('woff'),
+    url('../assets/fonts/Spoqa\ Han\ Sans\ Thin.ttf') format('truetype');
+}
+
+* {
+  font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
+  box-sizing: border-box;
+}
+
+html,
+body {
+  font-size: 10px;
+}
+
 html,
 body,
 div,
